# AndroidAssimp

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: Globe.mtl  earth1.mtl  moon.mtl
app/src/main/assets/shaders/: shader.vs
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni/: AndroidEnvPort.cpp  AssimpRendererPort.cpp
app/src/main/cpp/modelAssimp/: AssimpLoader.cpp  AssimpLoader.h  CameraCalculator.cpp  CameraCalculator.h  ModelInteraction.cpp  ModelInteraction.h  myGLCamera.cpp  myGLCamera.h
app/src/main/cpp/shader/: ShaderLoader.cpp  ShaderLoader.h
app/src/main/cpp/utils/: FileUtils.cpp  FileUtils.h  LogHelper.h  ShaderUtils.cpp  ShaderUtils.h  StringUtils.cpp  StringUtils.h
app/src/main/java/com/daweibayu/androidassimp/: AssimpApplication.kt  AssimpNativeInitTask.kt  AssimpRenderer.kt  GestureTouchListener.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
